scraper working. unable to populate info on main index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,6 +48,7 @@
               <form action="/save" method="POST">
                 <input id="article-title" type="hidden" name="title" value="{{this.title}}">
                 <input id="article-link" type="hidden" name="link" value={{this.link}}>
+                <input id="article-summary" type="hidden" name="summary" value={{this.summary}}>
                 <button type="submit" class="btn btn-default pull-right">SAVE ARTICLE</button>
               </form>
             </div>
